[feature][refactor] Improve database utility methods and enhance SQL query handling with modern Java features